@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.19 version.
 
 0.06 2015-10-01T12:34:02+02:00
  - Improve SEE ALSO section in doc.
